// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Components: RenderInput renders correctly 1`] = `
<RenderInput
  handleBlur={[Function]}
  handleChange={[Function]}
  handleFocus={[Function]}
  meta={
    Object {
      "asyncValidating": false,
      "error": null,
      "touched": false,
    }
  }
  name="email"
  placeholder="jane"
  type="email"
  value=""
>
  <Input
    className=""
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="jane"
    tag="p"
    type="email"
    value=""
  >
    <input
      className="form-control"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="email"
      value=""
    />
  </Input>
</RenderInput>
`;

exports[`Form Components: RenderInput shows 'Checking' when async validating 1`] = `
<RenderInput
  handleBlur={[Function]}
  handleChange={[Function]}
  handleFocus={[Function]}
  meta={
    Object {
      "asyncValidating": true,
      "touched": true,
    }
  }
  name="email"
  placeholder="jane"
  type="email"
  value=""
>
  <Input
    className="is-valid"
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="jane"
    tag="p"
    type="email"
    value=""
  >
    <input
      className="is-valid form-control"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="email"
      value=""
    />
  </Input>
  <small
    className="form-text"
  >
    Checking...
  </small>
</RenderInput>
`;

exports[`Form Components: RenderInput shows error when found 1`] = `
<RenderInput
  handleBlur={[Function]}
  handleChange={[Function]}
  handleFocus={[Function]}
  meta={
    Object {
      "asyncValidating": false,
      "error": "This is an error",
      "touched": true,
    }
  }
  name="email"
  placeholder="jane"
  type="email"
  value="jane@smith.me"
>
  <Input
    className="is-invalid"
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="jane"
    tag="p"
    type="email"
    value="jane@smith.me"
  >
    <input
      className="is-invalid form-control"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="email"
      value="jane@smith.me"
    />
  </Input>
  <div
    className="invalid-feedback"
  >
    This is an error
  </div>
</RenderInput>
`;
